Other improvements in the UI
Switched from TVDB to TMDB for show info and images
Replaced the control to select the year because the CarouselView control I used caused a lot of bugs.
Improved the Prediction Breakdown calculation. Adjust precision in settings if this runs slowly on your device.
Fixed a rare bug that would crash the app on startup
Fixed a bug when resuming app
Foxed a bug where predictions would sometimes not be categorized
[Windows] Improved image scaling
[Android] Improved the look of the search bar

1.6.5
Changed "Network Average Renewal Threshold" to "Network Typical Renewal Threshold" to better reflect the way that threshold is calculated.
Prepared app for a change in the notification service, beginning 2021.

1.6.1
Fixed an issue early in the season when networks have no shows added yet.

1.6.0
Support for slightly more accurate prediction breakdown calculations
Fixed: Homepage Show/Network link would not activate if it was the very first word in the post.

1.5.0
Support for improved future ratings projections in the ratings breakdown page

1.4.1
[Android] Fixed an issue with the clickable links on the main post, and various display issues.

1.4.0
Added page for viewing full changelog
Added option to donate via Paypal

1.3.0
Support for new factor in predictions: TV Season #
App is now free!

1.2.1
Fixed an error displaying current prediction in Prediction Results page when "Use Odds" is enabled

1.2.0
Modified Neural network preprocessing
Updated prediction breakdown to match the new calculation
Fixed a crash when there is an issue reading the predictions
Fixed an issue related to file access permission

1.1.3
Improved Prediction Breakdown calculation
Improved display on 7" devices
Display Reload Predictions button and message if downloaded predictions are incomplete
Fixed a crash when backing out of a page before an image is fuly loaded

1.1.2
Fixed an issue when data was restricted for the app
Improvement to prediction breakdown calculation